# devops

./: README.md
ansible/: README.md
ansible/doc/: basics.md  overview.md
cmake/: README.md
cmake/doc/: cmake.md
cmake/experiments/: CMakeLists.txt  scenario.sh  scenario_gdb.sh  titi.cpp
cmake/experiments/titou/: CMakeLists.txt  other.cpp
cmake/projet-c/: CMakeLists.txt  CPackConfig.cmake
cmake/projet-c/include/: CMakeLists.txt
cmake/projet-c/src/: CMakeLists.txt  DESC.txt  LICENCE.txt  WELCOME.txt  main.c
cmake/projet-c/src/lib/: CMakeLists.txt  calculator.c
cucumber/: README.md
cucumber/doc/: cucumber.md
docker/doc/: docker-compose.html  docker-compose.md  docker-file.md  docker-hub.md  docker-kubernetes.html  docker-kubernetes.md  docker-network.md
ide/code-style/: python.md  shell.md
ide/emacs/: doom_python_setup.md  emacs-complet.md  emacs-concis.md  installation_sauvegarde_restauration.md  sauvegarde_doom.sh
ide/ia/: install.sh  ollama_mistral.md
ide/vim/: installation_sauvegarde_restauration.md  readme.md  vim-complet.md  vim-concis.md  vim.md  vim_cmd.md  vim_ide_cpp.md  vim_vundle.md  vimrc.ide_cpp  vimrc.ide_cpp_deus_theme
ide/vscode/: coder.md  hack_font.md  procedure_sauvegarde_restauration.md  restaure_conf_vscode.sh  sauvegarde_conf_vscode.sh
jenkins/: README.md
jenkins/doc/: install-java.md  install-jenkins.md
scm/: README.md
scm/git/: README.md  index_1
teamviewer/: README.md
virtualbox/: README.md  conf_nat_et_interne.md  mount_vhd_virtual_box
vm/: README.md  script.sh  vm-virt
vm/cloud-init/: meta-data  (+1 more)
(+61 files in other folders)
